# HybridStackMini_Demo

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
driver/: pico3000_single.py  pico6000_single.py  picoscope.py  utils.py
gui/: acquisition_vm.py  graph_viewmodel.py  main_window.py  matched_filter_viewmodel.py  theme.py
src/: config.py  log.py  main.py
src/driver/: pico3000_single.py  pico6000_single.py  utils.py
src/gui/: acquisition_vm.py  graph_viewmodel.py  main_window.py  matched_filter_viewmodel.py  theme.py
