[project]
name = "hybridstackmini-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "picosdk>=1.1",
    "pyopengl>=3.1.10",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
]
